# Delft3D-dependabot-test

./: .gitignore  README.md  build.bat
.devcontainer/delft3d/: devcontainer.json
.github/: dependabot.yml
ci/DIMRset_delivery/: requirements.txt
ci/DIMRset_delivery/scripts/: count_signed.py  list_all_what_strings.py
ci/DIMRset_delivery/src/: DIMRset-binaries.json  DimrAutomation.py  dimr_context.py  fm-suite-binaries.json  print_signing.py  run_dimr_automation.py  step2_download_and_install_artifacts.py  teamcity_retrieve_engine_test_status_dpc.py  validate_signing.py
ci/DIMRset_delivery/test/: conftest.py  test_integration.py  test_teamcity_retrieve_engine_test_status_dpc.py
ci/DIMRset_delivery/utils/: svnremove_deleted_files.py
ci/dockerfiles/: Dockerfile-dhydro
ci/dockerfiles/linux/: buildtools.Dockerfile  third-party-libs.Dockerfile
ci/nuget/Dimr.Libs/: Dimr.Libs.nuspec
ci/python/: pyproject.toml
ci/teamcity/Delft3D/: copyExamples.kt  dimrbak.kt  publish.kt  settings.kts  trigger.kt
ci/teamcity/Dimr_Testbench/: LinuxAll.kt  LinuxTestTemplate.kt  settings.kts
ci/teamcity/Dimr_TestbenchMatrix/: dimr_testbench_table.csv  linux.kt  linux_approve.kt  release.kt  settings.kts  trigger.kt  windows.kt  windows_approve.kt
ci/teamcity/scripts/: check_scope.py  testbench_filter.py
ci/teamcity/signing/: sign.kt
ci/teamcity/test/: test_testbench_filter.py
examples/: readme.txt  run_docker.sh
examples/02_dflowfm_parallel/: run.bat
examples/04_dflowfm_dwaq_parallel/: run.bat
examples/06_dflowfm_dwaq-BLOOM_parallel/: run.bat
examples/08_dflowfm_sequential_dwaves/: run.bat
examples/09_dflowfm_parallel_dwaves/: run.bat
examples/11_dflowfm_parallel_drtc_dwaves/: run.bat
examples/dflowfm/: readme.txt  run-all-examples-apptainer.sh  run-all-examples-container.sh  run-all-examples-docker.sh
examples/dflowfm/01_dflowfm_sequential/: run_apptainer.sh
examples/dflowfm/02_dflowfm_parallel/: run_apptainer.sh
examples/dflowfm/03_dflowfm_dwaq_sequential/: run_apptainer.sh
examples/dflowfm/05_dflowfm_dwaq-BLOOM_sequential/: run_apptainer.sh
examples/dflowfm/06_dflowfm_dwaq-BLOOM_parallel/: run_apptainer.sh
examples/dflowfm/08_dflowfm_sequential_dwaves/: run_apptainer.sh
examples/dflowfm/09_dflowfm_parallel_dwaves/: run_apptainer.sh
examples/dflowfm/10_dflowfm_sequential_drtc_dwaves/: run_apptainer.sh
src/: Copyright.txt  setenv.sh
src/cmake/: CMakeLists.txt  functions.cmake
src/cmake/compiler_options/: compiler_warning_targets.cmake  fortran_styler.cmake  intel.cmake
src/cmake/configurations/: dwaq_configuration.cmake  flow1d_configuration.cmake  flow2d3d_configuration.cmake  readme.txt  rr_configuration.cmake  rr_rtc_configuration.cmake  rtc_configuration.cmake  tests_configuration.cmake
src/cmake/install_dimr/: install_and_bundle.cmake
src/cmake/install_fbc/: CMakeLists.txt  install_and_bundle.cmake
src/cmake/install_flow2d3d/: install_and_bundle.cmake
src/cmake/modules/: engines_gpl.cmake  third_parties.cmake  tools_gpl.cmake  utils_gpl.cmake  utils_lgpl.cmake
src/cmake/templates/: example_CMakeLists.txt
src/plugins_lgpl/plugin_culvert/: CMakeLists.txt
src/plugins_lgpl/plugin_delftflow_traform/: CMakeLists.txt
src/scripts_lgpl/singularity/: dflowfm_recipe_external_mpi.def  submit_native_h7.sh
src/tools_gpl/csumo_nfio/: CMakeLists.txt
test/deltares_testbench/: .dockerignore  TestBench.py  pyproject.toml
tools/: fix_copyright.py
tools/deltares_fortran_styler/: .gitignore  README.md  pyproject.toml
tools/deltares_fortran_styler/src/deltares_fortran_styler/: __init__.py  array_delimiter_converter.py  base_converter.py  double_precision_converter.py  file_processor.py  fortran_styler.py  semicolon_separator_converter.py
tools/deltares_fortran_styler/tests/: __init__.py  test_array_delimiter_converter.py  test_double_precision_converter.py  test_semicolon_separator_converter.py
tools/double_precision_conversion/: convert_double.py
tools/fprettify/: .fprettify.rc  run_fprettify.sh
tools/warnings_as_errors/: fortran_warnings_as_errors.py
(+1296 files in other folders)
